--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Random Quote Generator</title>
-  <link rel="stylesheet" href="quote.css">
+  <link rel="stylesheet" href="style.css">
   
 </head>
 <body>
@@ -12,6 +12,6 @@
     <div id="author"></div>
     <button onclick="generateQuote()">New Quote</button>
   </div>
-  <script src="quote.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
